[package]
name = "rmk-stm32l4"
version = "0.1.0"
description = "Keyboard firmware written in Rust"
homepage = "https://github.com/haobogu/rmk"
repository = "https://github.com/haobogu/rmk"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
rmk = { version = "0.8", features = ["async_matrix"] }
cortex-m = { version = "0.7.7", features = ['critical-section-single-core'] }
cortex-m-rt = "0.7.5"
embassy-time = { version = "0.5", features = ["tick-hz-32_768"] }
embassy-stm32 = { version = "0.5", features = ["stm32l432kb", "memory-x", "time-driver-any", "exti"] }
embassy-executor = { version = "0.9", features = ["arch-cortex-m", "executor-thread"] }
static_cell = "2"
panic-probe = { version = "1.0", features = ["print-defmt"] }

[build-dependencies]
xz2 = "0.1.7"
json = "0.12"
const-gen = "1.6"

[[bin]]
name = "rmk-stm32l4"
test = false
bench = false

[profile.dev]
codegen-units = 1      # better optimizations
debug = true
opt-level = 1
overflow-checks = true
lto = false
panic = 'unwind'

[profile.release]
codegen-units = 1       # better optimizations
debug = true            # no overhead for bare-metal
opt-level = "z"         # optimize for binary size
overflow-checks = true
lto = "fat"
