cargo-features = ["profile-rustflags", "panic-immediate-abort"]

[package]
name = "rmk-q1_pro_iso"
version = "0.8.0"
description = "Keyboard firmware written in Rust"
homepage = "https://github.com/haobogu/rmk"
repository = "https://github.com/haobogu/rmk"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
rmk = { version = "0.8", default-features = false, features = ["async_matrix", "storage", "vial", "vial_lock"] }
cortex-m = { version = "0.7.7", features = ['critical-section-single-core'] }
cortex-m-rt = "0.7.5"
embassy-time = { version = "0.5", features = ["tick-hz-32_768"] }
embassy-stm32 = { version = "0.5", features = ["stm32l432kb", "memory-x", "time-driver-any", "exti"] }
embassy-executor = { version = "0.9", features = ["arch-cortex-m", "executor-thread"] }
static_cell = "2"

[build-dependencies]
xz2 = "0.1.7"
json = "0.12"
const-gen = "1.6"

[[bin]]
name = "rmk-q1_pro_iso"
test = false
bench = false

[profile.dev]
codegen-units = 1      # better optimizations
debug = true
opt-level = 1
overflow-checks = true
lto = false
panic = 'unwind'

[profile.release]
codegen-units = 1       # better optimizations
debug = false
strip = "symbols"
opt-level = "z"         # optimize for binary size
overflow-checks = false
lto = "fat"
panic = "immediate-abort"
